--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -27,7 +27,7 @@ body {
     display: flex;
 }
 .bar{
-    height: 20px;
+    height: 10px;
     width: 20px;
     margin: 15px;
     cursor: pointer;
@@ -55,7 +55,7 @@ input[name="r"] {
 
 .slide {
     width: 25%;
-    transform:  1.1s ease;
+    transform: all 1.1s ease;
 }
 .slide img {
     width: 100%;
@@ -71,6 +71,6 @@ input[name="r"] {
 #r3:checked ~.s1 {
     margin-left:-50%;
 }
-#r4:checked ~.s1 {
+#r4:checked~.s1 {
     margin-left:-75%;
 }
